added some more fixes